# media-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  mkdocs.yml  rustfmt.toml  wrapper.h
.cargo/: config.toml
.github/workflows/: bindings.yml  coverage.yml  docs.yml  publish.yml  test.yml
docs/: index.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: audio.md  filters.md  frame-extraction.md  index.md  logging.md  low-level.md  probing.md  raw-ffi.md  remuxing.md  seeking.md  transcoding.md
docs/reference/: audio.md  codec.md  errors.md  extract.md  filter.md  format.md  frame-packet.md  index.md  logging.md  probe.md  transcode.md  types.md
examples/: audio_encode_lowlevel.rs  audio_filters.rs  decode_frames.rs  extract_frames.rs  extract_sampling.rs  extract_save.rs  filters.rs  logging.rs  probe.rs  raw_ffi.rs  remux.rs  seek.rs  transcode_audio.rs  transcode_builder.rs  transcode_codecs.rs  transcode_drop_streams.rs  transcode_lowlevel.rs  transcode_oneliner.rs  transcode_progress.rs  transcode_trim.rs  version.rs
scripts/: coverage.sh
src/: error.rs  filter.rs  frame.rs  lib.rs  log.rs  packet.rs  prelude.rs  probe.rs  sys.rs
src/codec/: decoder.rs  encoder.rs  mod.rs  resampler.rs
src/extract/: encode_pool.rs  frame.rs  mod.rs  oneliner.rs  report.rs  sampler.rs  types.rs
src/format/: mod.rs  reader.rs  writer.rs
tests/: audio.rs  errors.rs  extract.rs  probe_decode.rs  transcode_highlevel.rs  transcode_lowlevel.rs
xtask/: Cargo.toml
xtask/src/: binaries.rs  generate.rs  main.rs  merge.rs
(+26 files in other folders)
